# anything2anything

./: .gitignore  LICENSE  README.md  anything2anything.py  pyproject.toml  requirements.txt
src/: __init__.py  categories.py  converters.py  dispatcher.py
src/anything2anything/: categories.py  cli.py  converters.py  dispatcher.py
